--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
     <title>Document</title>
 </head>
 <body>
-    <script>
 
-        
-    </script> 
+<div id="personas">
+    
+</div>
+
+
+    <div class="parrafos">
+        <p id="parrafo1"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem, accusantium?</p>
+        <p>Lorem ipsum dolor sit amet.</p>
+        <p id="parrafo3">Lorem ipsum dolor sit.</p>
+    </div>
+
+
+ 
      <script src="script.js"></script> 
 </body>
 </html>
